# SuperDesk

./: .gitignore  cmd_on_linux.txt
linux/: capture_window.cpp  compile.txt
linux_vert/: CmakeLists.txt  main.cpp
windows/: CMakeLists.txt  client.cpp  client.py  main.cpp
